--- a/css/board.css
+++ b/css/board.css
@@ -145,6 +145,7 @@ a {
 .card {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .card-content {
@@ -159,15 +160,23 @@ a {
 
 .trash-icon {
     cursor: pointer;
+    padding: 10px;
 }
 
-
-/*.card:hover {
-    rotate: 5deg;
-}*/
+.trash-icon:hover {
+    background-color: #94d5f0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    transition: all 255ms ease-in-out;
+}
 
 .changeIcon {
     cursor: pointer;
+    margin-left: -4px;
+}
+
+.changeIcon:hover {
+    height: 45px;
 }
 
 .card-head {
@@ -267,13 +276,11 @@ a {
 }
 
 .popUp-content {
-    /*height: 624px;*/
     width: 423px;
     background: white;
     border-radius: 30px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     padding: 50px;
-    gap: 25px;
 }
 
 .makeRow {
@@ -297,6 +304,7 @@ a {
     gap: 10px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    color: white;
 }
 
 .prio-medium-popUp {
@@ -311,6 +319,7 @@ a {
     gap: 10px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    color: white;
 }
 
 .prio-urgent-popUp {
@@ -325,13 +334,26 @@ a {
     gap: 10px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    color: white;
 }
 
 .popUp-close {
     display: flex;
     justify-content: flex-end;
     width: 100%;
+}
+
+.popup-img {
+    height: 30px;
     cursor: pointer;
+    padding: 10px;
+}
+
+.popup-img:hover {
+    background-color: #94d5f0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    transition: all 225ms ease-in-out;
 }
 
 .subtaskSection {
@@ -376,6 +398,12 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: -10px;
+}
+
+.headContextMenu img {
+    height: 25px;
+    padding: 5px;
 }
 
 .space {
@@ -387,6 +415,14 @@ a {
 @media(max-width: 1500px) {
     .board {
         flex-wrap: wrap;
+    }
+}
+
+@media(max-width: 1200px) {
+    .popUp-content {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
     }
 }
 
