--- a/css/contact.css
+++ b/css/contact.css
@@ -212,6 +212,14 @@ h1 {
     background-color: white;
 }
 
+.contact-edit-tools {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
 .edit-pencil-icon {
     height: 40px;
     display: none;
@@ -226,13 +234,13 @@ h1 {
 
 .contact-trash-icon:hover {
     background-color: white;
+    border-radius: 10px;
 }
 
 .icon-bottom-right {
     display: flex;
     justify-content: flex-end;
     margin-right: 30px;
-    margin-bottom: 30px;
     cursor: pointer;
 }
 
