--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -11,11 +11,23 @@
             </div>
             <div class="selection-container prevent-select">
                 <label>Category</label>
+                <div id="new-category" class="new-cat input-new-cat d-none">
+                    <div class="select-color d-none" id="selected-color"></div>
+                    <input id="new-category-input" type="name" placeholder="Category Name ...">
+                    <div id="category-added-cont" class="category-added-cont d-none" >New Category added!</div>
+                    <div id="category-required" class="category-added-cont d-none">Please enter a category!</div>
+                    <div class="new-category-icons">
+                        <input id="category-color" type="color" value="#2a3647">
+                        <img src="./assets/img/checkmark.png" alt="#" onclick="addColorCategory()">
+                        <img src="./assets/img/cancel.png" alt="#" onclick="closeNewCategory()">
+                    </div>
+                </div>
                 <div class="select-wrapper" onclick="openDropdown('category-choices')">
                     <div class="sector_top">
                         <p id="category-header">Select your Category</p><img src="./assets/img/arrow_down.png">
                     </div>
                     <div class="category-choices d-none" id="category-choices">
+                        <div class="category" onclick="openAddNewCategory('category-choices')">New Category<img class="new-category-img" src="assets/img/add_task_mob.svg"></div>
                         <div class="category" onclick="changeCategoryHeader('Marketing')">
                             <div id="marketing">Marketing </div>
                             <div class="circle" style="background: #0038ff;"></div>
