--- a/css/add_task.css
+++ b/css/add_task.css
@@ -416,6 +416,69 @@ fieldset {
     margin-bottom: 30px;
 }
 
+.new-cat {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    border: 1px solid #d1d1d1;
+    border-radius: 10px;
+    padding: 7px 20px;
+}
+
+.input-new-cat input {
+    width: 100%;
+    border: none;
+    padding: 10px 0;
+}
+
+.new-category-icons {
+    display: flex;
+    align-items: center;
+}
+
+.new-category-icons img {
+    height: 30px;
+    margin-left: 10px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.new-category-img {
+    height: 20px;
+    padding-left: 15px;
+}
+
+#category-color {
+    padding: 5;
+    border-radius: 999px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    padding: 4px;
+}
+
+.popup-task-added {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 5px 10px;
+    color: white;
+    background-color: #2A3647;
+    border: none;
+    border-radius: 10px;
+}
+
+#category-added-cont {
+    width: 300px;
+    z-index: 21;
+    font-size: 16px;
+    background-color: #2a3647;
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
+}
+
 @media(max-width:1400px) {
     .main-container {
         margin-right: 10px;
@@ -500,7 +563,7 @@ fieldset {
     input {
         font-size: 16px;
     }
-    ::placeholder {
+     ::placeholder {
         font-size: 16px;
     }
     textarea {
