--- a/css/contact.css
+++ b/css/contact.css
@@ -4,11 +4,13 @@ body {
     background-color: #F5F5F5;
     font-family: 'Inter', sans-serif;
     user-select: none;
+    height: 100vh;
 }
 
 .overflow {
     position: relative;
     overflow-x: hidden;
+    /* height: 100vh; */
 }
 
 .contacts-main-container {
@@ -140,23 +142,25 @@ h1 {
 .icon-top-right {
     display: flex;
     justify-content: flex-end;
-    cursor: pointer;
 }
 
 .contact-cancel-icon,
 .contact-cancel-icon-mobile {
     padding: 10px;
     height: 25px;
-    border-radius: 50%;
+    border-radius: 8px;
     transition: all 225ms ease-in-out;
+    cursor: pointer;
 }
 
 .contact-cancel-icon:hover {
-    background-color: #F5F5F5;
+    background-color: #94d5f0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .contact-cancel-icon-mobile:hover {
-    background-color: rgba(245, 245, 245, 0.5);
+    background-color: #94d5f0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .contact-selection-box {
@@ -204,12 +208,13 @@ h1 {
 .contact-edit-icon {
     padding: 10px;
     height: 25px;
-    border-radius: 50%;
+    border-radius: 10px;
     transition: all 225ms ease-in-out;
 }
 
 .contact-edit-icon:hover {
-    background-color: white;
+    background-color: #94d5f0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .contact-edit-tools {
@@ -233,7 +238,8 @@ h1 {
 }
 
 .contact-trash-icon:hover {
-    background-color: white;
+    background-color: #94d5f0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
 }
 
@@ -357,6 +363,18 @@ h1 {
     display: flex;
     box-shadow: 0 0 14px 3px rgb(0 0 0 / 4%);
     border-radius: 30px;
+    background: white;
+    /* padding: 15px 50px; */
+}
+
+.contact-form-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 99; /* see contact-form-overlay */
 }
 
 .contact-form-left-neutral {
@@ -399,6 +417,7 @@ h1 {
     flex-direction: column;
     gap: 25px;
     padding: 30px;
+    width: 452px;
 }
 
 .contact-form-logo {
@@ -468,7 +487,6 @@ h1 {
 .form-group {
     padding-bottom: 25px;
 }
-
 
 /* Add task overlay */
 
@@ -653,6 +671,7 @@ select::-ms-expand {
 
 .p-none {
     padding: 0px!important;
+    border: none;
     cursor: pointer;
 }
 
@@ -667,6 +686,32 @@ select::-ms-expand {
 .visibility {
     visibility: hidden;
 }
+
+.area-for-close-popups {
+    width: 100%;
+    height: 100%;
+}
+
+/* #closeAddContactPopup {
+    height: 73vh;
+    width: 100vw;
+} */
+
+.popup-contact-added {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 5px 10px;
+    color: white;
+    background-color: #2A3647;
+    border: none;
+    border-radius: 10px;
+}
+
+@media(max-width: 1100px) {
+    
+}  
 
 @media(max-width:1000px) {    
     .contact-list-container {
@@ -715,6 +760,7 @@ select::-ms-expand {
     .show-contact-selection-overlay {
         transform: translateX(0px);
         z-index: 999;
+        position: fixed;
     }
     .contact-header-container {
         display: flex;
@@ -816,6 +862,7 @@ select::-ms-expand {
     }
     .contact-input-container {
         padding: 0 15px 15px 15px !important;
+        width: unset;
     }
     .margin-top {
         margin-top: 60px;
@@ -877,6 +924,23 @@ select::-ms-expand {
         width: 100%;
         height: 100%;
     }
+    
+    .add-form-left {
+        width: unset;
+    }
+
+    .add-form-right {
+        display:  block;
+    }
+
+    .prio-btn-container {
+        gap: 2px!important;
+    }
+
+    .prio-btn {
+        font-size: 13px!important;
+    }
+    
 }
 
 @media(max-width: 400px) {
@@ -918,9 +982,3 @@ select::-ms-expand {
         display: none;
     }
 }
-
-/* @media(max-height: 850px) {
-    .contact-form-overlay {
-        top: 430px;
-    }
-} */
