--- a/css/login.css
+++ b/css/login.css
@@ -112,10 +112,9 @@ body {
     width: 91px;
     height: 51px;
     font-size: 16px;
-    line-height: 19.2px;
 }
 
-.sign-up-btn:hover {
+.sign-up-btn-login:hover {
     background: #29ABE2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: all 125ms ease-in-out;
@@ -139,7 +138,7 @@ body {
     color: #D1D1D1;
     font-size: 18px;
     font-weight: 400;
-    line-height: 25.2px;
+    /* line-height: 25.2px; */
 }
 
 .input-email-pw {
@@ -182,7 +181,7 @@ body {
 .login-bottom-font {
     font-weight: 400;
     font-size: 16px;
-    line-height: 19.2px;
+    /* line-height: 19.2px; */
 }
 
 .login-bottom span {
@@ -207,7 +206,7 @@ body {
 .btn-font {
     font-size: 21px;
     font-weight: 700;
-    line-height: 25.2px;
+    /* line-height: 25.2px; */
 }
 
 .login-buttons button {
@@ -311,7 +310,6 @@ body {
 #email-sent-text {
     position: fixed;
     bottom: 70px;
-
 }
 
 .continue-btn {
@@ -506,12 +504,30 @@ body {
     }
 
     @keyframes mobile {
-        0% {opacity: 100%;}
-        50% {opacity: 100%;}
-        100% {opacity: 0%;}
+        0% {visibility: 100%;}
+        50% {visibility: 100%;}
+        100% {visibility: 0%;}
     }
 
     .animation-stop {
         display: none !important;
+    }
+}
+
+@media(max-width: 400px) {
+    .join-logo {
+        display: none;
+    }
+
+    .content {
+        height: 90vh;
+    }
+
+    .sign-up {
+        bottom: 18px;
+    }
+
+    #email-sent-text {
+        bottom: 35px;
     }
 }
