--- a/css/board.css
+++ b/css/board.css
@@ -235,7 +235,7 @@ a {
     margin: 15px 0px;
 }
 
-.priotity_users {
+.priority_users {
     display: flex;
     justify-content: space-between;
     align-items: center;
