--- a/css/header_nav.css
+++ b/css/header_nav.css
@@ -11,7 +11,6 @@ body {
     color: #000000;
 }
 
-
 /* header start */
 
 header {
@@ -131,6 +130,10 @@ nav {
 }
 
 .nav-main:hover {
+    background-color: #29ABE2;
+}
+
+.active {
     background-color: #091931;
 }
 
