--- a/css/board_add_task.css
+++ b/css/board_add_task.css
@@ -285,52 +285,58 @@ select::-ms-expand {
 }
 
 .submit-and-clear button {
-    font-size: 1.5rem;
+    font-size: 14px;
     border-radius: 10px;
     padding: 18px 10px;
     margin-left: 25px;
-    transition: background 255ms ease-in-out;
+    transition: all 225ms ease-in-out;
 }
 
 .btn-createTask {
-    background: #2A3647;
-    color: white;
-    border: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 10px;
+    color: white;
+    background-color: #2A3647;
+    padding: 5px 10px 5px 10px;
+    gap: 8px;
+    border: none;
+    border-radius: 8px;
     font-weight: 700;
-    transition: all 100ms ease-in-out;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+    width: 170px;
 }
 
 .btn-createTask:hover {
     background-color: #29ABE2;
-    border: 2px solid #29ABE2;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px;
 }
 
 .btn-clear {
-    border: solid 1px #2A3647;
-    font-size: 1.5rem;
-    border-radius: 10px;
-    padding: 18px 10px;
-    margin-left: 25px;
-    transition: background 255ms ease-in-out;
-    color: #2A3647;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    width: 136px;
-    gap: 10px;
-    transition: all 100ms ease-in-out;
+    background-color: white;
+    padding: 5px 10px 5px 10px;
+    gap: 8px;
+    border: 1px solid black;
+    border-radius: 8px;
+    color: #2A3647;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 0.5px;
     cursor: pointer;
+    transition: all 225ms ease-in-out;
+    width: 140px;
 }
 
 .btn-clear:hover {
     color: #29ABE2;
-    border: 2px solid #29ABE2;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-color: #29ABE2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .btn-clear:hover .clear-img {
