--- a/css/help.css
+++ b/css/help.css
@@ -6,6 +6,7 @@ body {
     margin-top: var(--header-height);
     padding-left: calc(355px - var(--nav-width));
     padding-top: calc(171px - var(--header-height));
+    user-select: none;
 }
 
 a {
