--- a/css/login.css
+++ b/css/login.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     background-color: #F5F5F5;
     font-family: 'Inter', sans-serif;
+    user-select: none;
 }
 
 .d-none {
